chore(tests): fix IntelliJ warnings in test files
- Replace list.get(0) with list.getFirst() in all unit test files
  (ApprovalServiceTest, ProjectServiceTest, JobServiceTest,
  BlockReasonServiceTest, NoteServiceTest)
- Extract builder calls before assertThatThrownBy lambdas so each
  lambda has only one invocation that can throw a runtime exception
  (ProjectServiceTest x3, JobServiceTest x2)
- Remove redundant throws Exception from
  BlockReasonIntegrationTest.deleteBlockReason_canBeRestoredOnNextBlock
  which uses no MockMvc calls